thinkinshop/docs/deploy/cluster/k8s/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: laike-apis
  namespace: laike-prod
  labels:
    app: laike-apis
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: laike-apis
  ports:
    - name: http
      port: 80
      targetPort: 21898
      protocol: TCP
  sessionAffinity: None
